--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 logging.level.org.springframework = debug
 spring.messages.basename=messages
+spring.security.user.name=username
+spring.security.user.password=password
